force-app/main/default/objects/EmailMessage/fields/TR1__AttachmentNames__c.field-meta.xml
<CustomField>
    <fullName>TR1__AttachmentNames__c</fullName>
    <label>Attachment Names</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>