force-app/main/default/objects/EmailMessage/fields/TR1__Contact_Document_Ids__c.field-meta.xml
<CustomField>
    <fullName>TR1__Contact_Document_Ids__c</fullName>
    <label>Shared Resumes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>