force-app/main/default/objects/EmailMessage/fields/TR1__Template_Id__c.field-meta.xml
<CustomField>
    <fullName>TR1__Template_Id__c</fullName>
    <description>Stores the identifier of Salesforce Email Template.</description>
    <inlineHelpText>Stores the identifier of Salesforce Email Template.</inlineHelpText>
    <label>Template Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>