force-app/main/default/objects/EmailMessage/fields/TR1__Template_Name__c.field-meta.xml
<CustomField>
    <fullName>TR1__Template_Name__c</fullName>
    <description>Stores the name of Salesforce Email Template.</description>
    <inlineHelpText>Stores the name of Salesforce Email Template (in format &lt;Folder Name&gt;: &lt;Email Template Name&gt;)</inlineHelpText>
    <label>Template Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>